Prevent flickering of target match scores

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -135,7 +135,7 @@ body {
 }
 
 .k-browser .k-match-column {
-  width: 1.5ch;
+  width: 8ch;
 }
 
 .k-browser .k-spinner {
